Move stats bar to top of card to avoid covering name

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ header h1 {
 /* Stats bar */
 .card-stats {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
   display: flex;
